@@ -2,6 +2,7 @@
 	- Fix #1263: Exempt loopback addresses from wait-limit.
 	- Fix wait-limit-netblock and wait-limit-cookie-netblock config parse
 	  to allow two arguments.
+	- Fix ub_event and include dnstap and win_svc headers.
 
 2 April 2025: Yorgos
 	- Merge #1262 from markyang92, fix build with
